...
//  CMPT 275 Group 3 - SavePark
//  Fall 2018

//  File Created By: Curtis Cheung
//  File Modified By: Curtis Cheung

//  Known Bug(s): When selecting the "Delete" button in ImagePreview.swift, the gallery mode view still shows the deleted photo (GitHub Issue #2)

//  All changes are marked with "CMPT275" (no quotes)
//  Changes:
//  10/10/2018 - Changed Grid Tile Size for easier access
//  10/15/2018 - Removed Slide feature to slide between photos in Preview Mode
//  10/25/2018 - Code Cleanup (comments)
...
        button.backgroundColor = UIColor.white
        let xPostion:CGFloat = 10
        let yPostion:CGFloat = 30
        let buttonWidth:CGFloat = 350
        let buttonHeight:CGFloat = 45
        button.frame = CGRect(x:xPostion, y:yPostion, width:buttonWidth, height:buttonHeight)
        button.setTitle("Back", for: .normal)
        button.addTarget(self, action: #selector(dismissView), for: .touchUpInside)
        return button
    }()
    
    // CMPT275 - Button to Backup Photo to Google Firebase (backed up to /backup)
    let uploadButton: UIButton = {
...
        button.backgroundColor = UIColor.white
        let xPostion:CGFloat = 20
        let yPostion:CGFloat = 80
        let buttonWidth:CGFloat = 150
        let buttonHeight:CGFloat = 45
        button.frame = CGRect(x:xPostion, y:yPostion, width:buttonWidth, height:buttonHeight)
        button.setTitle("Backup", for: .normal)
        button.addTarget(self, action: #selector(uploadPhoto), for: .touchUpInside)
        return button
    }()
    
    // CMPT275 - Button to Share Photo
    let shareButton: UIButton = {
...
        button.backgroundColor = UIColor.white
        let xPostion:CGFloat = 200
        let yPostion:CGFloat = 80
        let buttonWidth:CGFloat = 150
        let buttonHeight:CGFloat = 45
        button.frame = CGRect(x:xPostion, y:yPostion, width:buttonWidth, height:buttonHeight)
        button.setTitle("Share", for: .normal)
        button.addTarget(self, action: #selector(shareOnlyImage), for: .touchUpInside)
        return button
    }()
    
    // CMPT275 - Button to delete Photo
    let deleteButton: UIButton = {
...
