...
    @IBOutlet var Button_1: UISwitch!
    @IBOutlet var Button_2: UISwitch!
    @IBOutlet var Button_3: UISwitch!
    @IBOutlet var Button_4: UISwitch!
    @IBOutlet var Button_5: UISwitch!
    @IBOutlet var Button_6: UISwitch!
    @IBOutlet var Save: UIButton!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Enlarge Button by 1.25x for ease of use
        Button_1.transform = CGAffineTransform(scaleX: 1.25, y: 1.25)
        Button_2.transform = CGAffineTransform(scaleX: 1.25, y: 1.25)
...
